--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/file": "^4.0.1",
         "@ionic-native/file-path": "^4.0.1",
         "@ionic-native/image-picker": "^4.0.1",
+        "@ionic-native/social-sharing": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^4.0.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -42,7 +43,9 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-socialsharing": "^5.1.8",
         "cordova-sqlite-storage": "^2.0.4",
+        "es6-promise-plugin": "^4.1.0",
         "ionic-angular": "3.5.3",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -70,7 +73,8 @@
             "cordova-plugin-file": {},
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-filepath": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "android"
