--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/camera": "^4.0.1",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/email-composer": "^4.1.0",
         "@ionic-native/file": "^4.0.1",
         "@ionic-native/file-path": "^4.0.1",
         "@ionic-native/image-picker": "^4.0.1",
@@ -37,6 +38,7 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-email-composer": "^0.8.7",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-filepath": "^1.0.2",
@@ -74,7 +76,8 @@
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-filepath": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-x-socialsharing": {}
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-plugin-email-composer": {}
         },
         "platforms": [
             "android"
