--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/file": "^4.0.1",
         "@ionic-native/file-path": "^4.0.1",
         "@ionic-native/image-picker": "^4.0.1",
+        "@ionic-native/in-app-browser": "^4.1.0",
         "@ionic-native/social-sharing": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^4.0.1",
@@ -42,6 +43,7 @@
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-filepath": "^1.0.2",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -77,7 +79,8 @@
             "cordova-plugin-filepath": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-x-socialsharing": {},
-            "cordova-plugin-email-composer": {}
+            "cordova-plugin-email-composer": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
