--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "piggy-bank",
+    "name": "coin-by-coin",
     "version": "0.0.1",
     "author": "Ionic Framework",
     "homepage": "http://ionicframework.com/",
@@ -64,7 +64,7 @@
         "@ionic/cli-plugin-ionic-angular": "1.3.2",
         "typescript": "2.3.4"
     },
-    "description": "An Ionic project",
+    "description": "Savings and expenses tracker",
     "cordova": {
         "plugins": {
             "cordova-plugin-console": {},
