--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "coin-by-coin",
     "version": "1.0.0",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
+    "author": "Noel Gonzalez",
+    "homepage": "http://eaflex.com/",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
