--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "@ionic-native/camera": "^4.0.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/email-composer": "^4.1.0",
+        "@ionic-native/facebook": "^4.2.1",
         "@ionic-native/file": "^4.0.1",
         "@ionic-native/file-path": "^4.0.1",
+        "@ionic-native/google-plus": "^4.2.1",
         "@ionic-native/image-picker": "^4.0.1",
         "@ionic-native/in-app-browser": "^4.1.0",
         "@ionic-native/social-sharing": "^4.1.0",
@@ -33,6 +35,7 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic-native/transfer": "^3.14.0",
         "@ionic/storage": "2.0.1",
+        "angularfire2": "^4.0.0-rc.2",
         "chart.js": "^2.6.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
@@ -40,9 +43,11 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-email-composer": "^0.8.7",
+        "cordova-plugin-facebook4": "^1.9.1",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-filepath": "^1.0.2",
+        "cordova-plugin-googleplus": "^5.1.1",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -50,6 +55,7 @@
         "cordova-plugin-x-socialsharing": "^5.1.8",
         "cordova-sqlite-storage": "^2.0.4",
         "es6-promise-plugin": "^4.1.0",
+        "firebase": "^4.3.1",
         "ionic-angular": "3.5.3",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -81,7 +87,14 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-email-composer": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-googleplus": {
+                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.346822450290-d1itoic036psigphe0neql4a3tg8quno"
+            },
+            "cordova-plugin-facebook4": {
+                "APP_ID": "1964845993795993",
+                "APP_NAME": "Coin By Coin"
+            }
         },
         "platforms": [
             "android"
